[project]
name = "all-weather"
version = "1.1.0"
description = "All Weather Strategy implementation for A-share and US markets using pure risk parity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "yfinance>=0.2.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.8.0",
]
